Change vue.js source path

--- a/app.html
+++ b/app.html
@@ -79,7 +79,7 @@
     </div>
 
     <script src='./lib/initialize.js'></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="./lib/third/vue.js"></script>
     <script src='./lib/app.js'></script>
     <script src='./server/server.js'></script>
   </body>
